{
  "version": 4,
  "terraform_version": "0.12.8",
  "serial": 29,
  "lineage": "beeae662-64b7-e787-d06c-dc954b899b5a",
  "resources": [
    {
      "module": "module.mgt",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-08ecef2e4f1f9dbc8",
            "owner_id": "197966029048",
            "tags": {
              "Creator": "Terraform",
              "Desc": "Managed by Terraform",
              "Name": "igw_jpdev",
              "Profile": "jpdev",
              "Stage": "jpdev"
            },
            "vpc_id": "vpc-0d20985cc40bd1d17"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.mgt",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-037ee61329e7d0080",
            "owner_id": "197966029048",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08ecef2e4f1f9dbc8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Creator": "Terraform",
              "Desc": "Managed by Terraform",
              "Name": "rtb_public_jpdev",
              "Profile": "jpdev",
              "Stage": "jpdev"
            },
            "vpc_id": "vpc-0d20985cc40bd1d17"
          },
          "depends_on": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.mgt",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet_public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06105841d4d72fbd7",
            "route_table_id": "rtb-037ee61329e7d0080",
            "subnet_id": "subnet-04f7587543f9e18d5"
          },
          "depends_on": [
            "aws_route_table.rtb_public",
            "aws_subnet.subnet_public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00971f7cfc1bf5d1f",
            "route_table_id": "rtb-037ee61329e7d0080",
            "subnet_id": "subnet-063432475aa39df59"
          },
          "depends_on": [
            "aws_route_table.rtb_public",
            "aws_subnet.subnet_public"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c58f0a1af0bd4b2e",
            "route_table_id": "rtb-037ee61329e7d0080",
            "subnet_id": "subnet-00b5cba4d37a2c5c2"
          },
          "depends_on": [
            "aws_route_table.rtb_public",
            "aws_subnet.subnet_public"
          ]
        }
      ]
    },
    {
      "module": "module.mgt",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:197966029048:security-group/sg-0e088568a95148d49",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e088568a95148d49",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_jpdev_default",
            "name_prefix": null,
            "owner_id": "197966029048",
            "revoke_rules_on_delete": false,
            "tags": {
              "Creator": "Terraform",
              "Desc": "Managed by Terraform",
              "Name": "sg_default_jpdev",
              "Profile": "jpdev",
              "Stage": "jpdev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d20985cc40bd1d17"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.mgt",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_endpoint",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:197966029048:security-group/sg-08574d71ddb1dc12a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08574d71ddb1dc12a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-002e5b36ed44b6d5a",
                  "sg-0e088568a95148d49"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "sg_jpdev_endpoint",
            "name_prefix": null,
            "owner_id": "197966029048",
            "revoke_rules_on_delete": false,
            "tags": {
              "Creator": "Terraform",
              "Desc": "Managed by Terraform",
              "Name": "sg_endpoint_jpdev",
              "Profile": "jpdev",
              "Stage": "jpdev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d20985cc40bd1d17"
          },
          "depends_on": [
            "aws_security_group.sg_default",
            "aws_security_group.sg_lambda",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.mgt",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_lambda",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:197966029048:security-group/sg-002e5b36ed44b6d5a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-002e5b36ed44b6d5a",
            "ingress": [],
            "name": "sg_jpdev_lambda",
            "name_prefix": null,
            "owner_id": "197966029048",
            "revoke_rules_on_delete": false,
            "tags": {
              "Creator": "Terraform",
              "Desc": "Managed by Terraform",
              "Name": "sg_lambda_jpdev",
              "Profile": "jpdev",
              "Stage": "jpdev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d20985cc40bd1d17"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.mgt",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_mongodb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:197966029048:security-group/sg-0235b18e8d254fa66",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0235b18e8d254fa66",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-002e5b36ed44b6d5a",
                  "sg-0e088568a95148d49"
                ],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "sg_jpdev_mongodb",
            "name_prefix": null,
            "owner_id": "197966029048",
            "revoke_rules_on_delete": false,
            "tags": {
              "Creator": "Terraform",
              "Desc": "Managed by Terraform",
              "Name": "sg_mongodb_jpdev",
              "Profile": "jpdev",
              "Stage": "jpdev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d20985cc40bd1d17"
          },
          "depends_on": [
            "aws_security_group.sg_default",
            "aws_security_group.sg_lambda",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.mgt",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:197966029048:security-group/sg-0390f34dd48e8c3c6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0390f34dd48e8c3c6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_jpdev_ssh",
            "name_prefix": null,
            "owner_id": "197966029048",
            "revoke_rules_on_delete": false,
            "tags": {
              "Creator": "Terraform",
              "Desc": "Managed by Terraform",
              "Name": "sg_ssh_jpdev",
              "Profile": "jpdev",
              "Stage": "jpdev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d20985cc40bd1d17"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.mgt",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:197966029048:security-group/sg-06dcd5c82965f452c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06dcd5c82965f452c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "sg_jpdev_web",
            "name_prefix": null,
            "owner_id": "197966029048",
            "revoke_rules_on_delete": false,
            "tags": {
              "Creator": "Terraform",
              "Desc": "Managed by Terraform",
              "Name": "sg_web_jpdev",
              "Profile": "jpdev",
              "Stage": "jpdev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d20985cc40bd1d17"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.mgt",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:197966029048:subnet/subnet-04f7587543f9e18d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.1.11.0/24",
            "id": "subnet-04f7587543f9e18d5",
            "map_public_ip_on_launch": true,
            "owner_id": "197966029048",
            "tags": {
              "Creator": "Terraform",
              "Desc": "Managed by Terraform",
              "Name": "public_subnet_jpdev",
              "Profile": "jpdev",
              "Stage": "jpdev"
            },
            "vpc_id": "vpc-0d20985cc40bd1d17"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:197966029048:subnet/subnet-063432475aa39df59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.1.12.0/24",
            "id": "subnet-063432475aa39df59",
            "map_public_ip_on_launch": true,
            "owner_id": "197966029048",
            "tags": {
              "Creator": "Terraform",
              "Desc": "Managed by Terraform",
              "Name": "public_subnet_jpdev",
              "Profile": "jpdev",
              "Stage": "jpdev"
            },
            "vpc_id": "vpc-0d20985cc40bd1d17"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:197966029048:subnet/subnet-00b5cba4d37a2c5c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.1.13.0/24",
            "id": "subnet-00b5cba4d37a2c5c2",
            "map_public_ip_on_launch": true,
            "owner_id": "197966029048",
            "tags": {
              "Creator": "Terraform",
              "Desc": "Managed by Terraform",
              "Name": "public_subnet_jpdev",
              "Profile": "jpdev",
              "Stage": "jpdev"
            },
            "vpc_id": "vpc-0d20985cc40bd1d17"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.mgt",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:197966029048:vpc/vpc-0d20985cc40bd1d17",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0374f0c78fa6e0664",
            "default_route_table_id": "rtb-05a6f331e319170bc",
            "default_security_group_id": "sg-0f1ee1ee6208d78b5",
            "dhcp_options_id": "dopt-6e2c5409",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d20985cc40bd1d17",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05a6f331e319170bc",
            "owner_id": "197966029048",
            "tags": {
              "Creator": "Terraform",
              "Desc": "Managed by Terraform",
              "Name": "vpc_jpdev",
              "Profile": "jpdev",
              "Stage": "jpdev"
            }
          }
        }
      ]
    },
    {
      "module": "module.mgt",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_blocks": [
              "52.219.0.0/20",
              "52.219.136.0/22",
              "52.219.16.0/22",
              "52.219.68.0/22"
            ],
            "id": "vpce-06eaa08624f381723",
            "owner_id": "197966029048",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-61a54008",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-037ee61329e7d0080"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.s3",
            "state": "available",
            "tags": {
              "Creator": "Terraform",
              "Desc": "Managed by Terraform",
              "Name": "endpoint_s3_jpdev",
              "Profile": "jpdev",
              "Stage": "jpdev"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0d20985cc40bd1d17"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.mgt",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sqs",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "vpce-0ade6b244b6cfb268",
            "owner_id": "197966029048",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-08574d71ddb1dc12a"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.sqs",
            "state": "available",
            "tags": {
              "Creator": "Terraform",
              "Desc": "Managed by Terraform",
              "Name": "endpoint_sqs_jpdev",
              "Profile": "jpdev",
              "Stage": "jpdev"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d20985cc40bd1d17"
          },
          "depends_on": [
            "aws_security_group.sg_endpoint",
            "aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}